[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/chars/pebble.png" type="Texture" id=1]
[ext_resource path="res://Bullets/Pebble.gd" type="Script" id=2]
[ext_resource path="res://src/sound/throw.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 3.25 )

[node name="Pebble" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 0.25 )
shape = SubResource( 2 )

[node name="duration" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="fx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
attenuation = 15.0
bus = "Sound"

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="duration" to="." method="_on_duration_timeout"]
[connection signal="finished" from="fx" to="." method="_on_fx_finished"]
